--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.0.12"
+  },
+  "dependencies": {
+    "@sanity/client": "^6.19.1",
+    "dotenv": "^16.4.5"
   }
 }
